zwaveadmin/01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: zwaveadmin
  labels:
    name: zwaveadmin
