zwaveadmin/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwaveadmin
  namespace: zwaveadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zwaveadmin
  template:
    metadata:
      labels:
        app: zwaveadmin
        name: zwaveadmin
    spec:
      restartPolicy: Always
      hostNetwork: true
      nodeName: nuc1
      containers:
      - name: zwaveadmin
        image: zwavejs/zwavejs2mqtt:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
          limits:
            cpu: 100m
            memory: 400Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8091
          initialDelaySeconds: 15
          periodSeconds: 60
        volumeMounts:
        - name: zwaveadmin
          mountPath: /usr/src/app/store
        - mountPath: /dev/ttyUSB0
          name: ttyusb0
        securityContext:
          privileged: true
      volumes:
        - name: zwaveadmin
          persistentVolumeClaim:
            claimName: longhorn-zwaveadmin-pvc
        - name: ttyusb0
          hostPath:
            path: /dev/ttyUSB0
